--- a/.github/workflows/develop-build.yml
+++ b/.github/workflows/develop-build.yml
@@ -79,7 +79,7 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         name: 'Development build (${{ needs.build.outputs.tag }})'
-        tag_name: heads/tags/develop
+        tag_name: develop
         prerelease: true
         body: |
           🚨 This is the development build of Carbon.
