--- a/.github/workflows/staging-build.yml
+++ b/.github/workflows/staging-build.yml
@@ -79,7 +79,7 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         name: 'Staging build (${{ needs.build.outputs.tag }})'
-        tag_name: staging
+        tag_name: staging_build
         prerelease: true
         body: |
           🚨 This is the staging build of Carbon.
@@ -102,7 +102,7 @@ jobs:
     - name: 🔗 Checkout source code from github
       uses: actions/checkout@v3
       with:
-        ref: staging
+        ref: staging_build
 
     - name: 🧹 Reset branch
       run: |
