--- a/.github/workflows/staging-build.yml
+++ b/.github/workflows/staging-build.yml
@@ -107,4 +107,4 @@ jobs:
         target_branch: staging
         github_token: ${{ github.token }}
         message: |
-          ci(auto): 🤖 Merge develop with staging (${{ needs.build.outputs.tag }})
+          ci(auto): 🤖 Merge develop with staging
