--- a/.github/workflows/production-build.yml
+++ b/.github/workflows/production-build.yml
@@ -5,7 +5,7 @@
 #  |______|___|___|___|__|______/_______|__|____|
 #                         discord.gg/eXPcNKK4yd
 # 
-name: 🚧 build-1-production
+name: Production Build
 concurrency: build-1-production
 
 on:
