--- a/.github/workflows/staging-build.yml
+++ b/.github/workflows/staging-build.yml
@@ -17,7 +17,7 @@ on:
     - cron: '0 5 * * 0'
 
   workflow_run:
-    workflows: [⤵️ merge-process-exec]
+    workflows: [branch-merge]
     types:
       - completed
     branches:
