Prod build action is now rolling release style

--- a/.github/workflows/production-build.yml
+++ b/.github/workflows/production-build.yml
@@ -132,11 +132,11 @@ jobs:
     - name: 🏷️ Update release tag
       uses: softprops/action-gh-release@v1
       with:
-        prerelease: true
+        prerelease: false
         tag_name: production_build
         name: 'Carbon Build (production)'
         body: |
-          🥈 This is a build of Carbon based on the `production` branch.
+          🥇 This is a build of Carbon based on the `production` branch.
           This build is targeted at the general public.
 
           ### How to install
