--- a/.github/workflows/production-build.yml
+++ b/.github/workflows/production-build.yml
@@ -136,15 +136,15 @@ jobs:
         tag_name: production_build
         name: 'Carbon Build (production)'
         body: |
-          🥇 This is a build of Carbon based on the `production` branch.
+          This is a build of Carbon based on the `production` branch.
           This build is targeted at the general public.
 
           ### How to install
-          1. ⬇️ Download the `Carbon.Patch.zip` archive from the attachments below.
-          2. 🗜️ Unzip the archive to the root of your Rust Dedicated Server.
-          3. 🔃 Restart the server and enjoy 🎉.
+          1. Download the `Carbon.Patch.zip` archive from the attachments below.
+          2. Unzip the archive to the root of your Rust Dedicated Server.
+          3. Restart the server and enjoy.
           
-          📅 ${{ needs.build-linux.outputs.build_info }}
+          ${{ needs.build-linux.outputs.build_info }}
         files: |
           Release/Carbon.dll
           Release/Carbon.Patch.zip
