Cleanup csproj; better asmname handling

--- a/Carbon.Core/Carbon.CodeGen/Carbon.CodeGen.csproj
+++ b/Carbon.Core/Carbon.CodeGen/Carbon.CodeGen.csproj
@@ -4,17 +4,17 @@
     <TargetFrameworks>net48</TargetFrameworks>
 
     <StartupObject>Carbon.CodeGen.Program</StartupObject>
-    <OutputType>Exe</OutputType>
-
     <Deterministic>true</Deterministic>
     <FileAlignment>512</FileAlignment>
+    <OutputType>Exe</OutputType>
 
     <ProjectGuid>{A65D823D-2855-4D0C-8DA8-E10E1FAC426F}</ProjectGuid>
     <Configurations>Debug;Release;ReleaseUnix;DebugUnix</Configurations>
   </PropertyGroup>
 
-    <PropertyGroup>
+  <PropertyGroup>
     <Product>Carbon</Product>
+    <AssemblyName>Carbon.CodeGen</AssemblyName>
     <Version>1.0.0.0</Version>
 
     <Company>Raul-Sorin Sorban</Company>
@@ -25,14 +25,12 @@
   </PropertyGroup>
 
   <PropertyGroup>
-    <TargetName>Carbon.CodeGen</TargetName><!-- This has impact on the output file name -->
     <VersionPrefix>$([System.DateTime]::UtcNow.ToString("yyyy.MM.dd.HHmm"))</VersionPrefix>
     <VersionSuffix>$(Configuration)</VersionSuffix>
 
     <InformationalVersion>$(VersionPrefix)-$(VersionSuffix)</InformationalVersion>
     <AssemblyVersion>$(Version)</AssemblyVersion>
     <FileVersion>$(VersionPrefix)</FileVersion>
-    <AssemblyName>$(TargetName)</AssemblyName>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)' == 'Debug'">
@@ -43,7 +41,7 @@
     <Optimize>true</Optimize>
   </PropertyGroup>
 
-    <PropertyGroup Condition="'$(Configuration)' == 'DebugUnix'">
+  <PropertyGroup Condition="'$(Configuration)' == 'DebugUnix'">
     <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
     <DefineConstants>DEBUG;UNIX</DefineConstants>
     <OutputPath>bin\DebugUnix\</OutputPath>
@@ -68,122 +66,153 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.ComponentModel.Composition" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Drawing" />
-    <Reference Include="System.Drawing.Design" />
-    <Reference Include="System.IO.Compression.FileSystem" />
-    <Reference Include="System.Numerics" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Core" />
     <Reference Include="System.Data" />
+    <Reference Include="System.IO.Compression.FileSystem" />
     <Reference Include="System.Xml" />
+    <Reference Include="System" />
   </ItemGroup>
 
   <ItemGroup>
-    <Reference Include="Humanlights.MCS">
-      <HintPath>..\..\External\Humanlights.MCS.dll</HintPath>
-    </Reference>
-    <Reference Include="Humanlights.System">
-      <HintPath>..\..\External\Humanlights.System.dll</HintPath>
-    </Reference>
-    <Reference Include="Humanlights.Unity">
-      <HintPath>..\..\External\Humanlights.Unity.dll</HintPath>
-    </Reference>
-    <Reference Include="Humanlights.Unity.Compiler">
-      <HintPath>..\..\External\Humanlights.Unity.Compiler.dll</HintPath>
-    </Reference>
+    <Reference Include="..\..\External\Humanlights.MCS.dll"/>
+    <Reference Include="..\..\External\Humanlights.System.dll"/>
+    <Reference Include="..\..\External\Humanlights.Unity.dll"/>
+    <Reference Include="..\..\External\Humanlights.Unity.Compiler.dll"/>
   </ItemGroup>
 
   <ItemGroup>
-    <Reference Include="0Harmony">
-      <HintPath>..\..\Rust\RustDedicated_Data\Managed\0Harmony.dll</HintPath>
+    <Reference Include="..\..\Rust\RustDedicated_Data\Managed\0Harmony.dll">
+      <PrivateAssets>all</PrivateAssets>
+      <SpecificVersion>false</SpecificVersion>
     </Reference>
-    <Reference Include="Assembly-CSharp">
-      <HintPath>..\..\Rust\RustDedicated_Data\Managed\Assembly-CSharp.dll</HintPath>
+    <Reference Include="..\..\Rust\RustDedicated_Data\Managed\Assembly-CSharp.dll">
+      <PrivateAssets>all</PrivateAssets>
+      <SpecificVersion>false</SpecificVersion>
     </Reference>
-    <Reference Include="Assembly-CSharp-firstpass">
-      <HintPath>..\..\Rust\RustDedicated_Data\Managed\Assembly-CSharp-firstpass.dll</HintPath>
+    <Reference Include="..\..\Rust\RustDedicated_Data\Managed\Assembly-CSharp-firstpass.dll">
+      <PrivateAssets>all</PrivateAssets>
+      <SpecificVersion>false</SpecificVersion>
     </Reference>
-    <Reference Include="EasyAntiCheat.Server">
-      <HintPath>..\..\Rust\RustDedicated_Data\Managed\EasyAntiCheat.Server.dll</HintPath>
+    <Reference Include="..\..\Rust\RustDedicated_Data\Managed\EasyAntiCheat.Client.dll">
+      <PrivateAssets>all</PrivateAssets>
+      <SpecificVersion>false</SpecificVersion>
     </Reference>
-    <Reference Include="Facepunch.Console">
-      <HintPath>..\..\Rust\RustDedicated_Data\Managed\Facepunch.Console.dll</HintPath>
+    <Reference Include="..\..\Rust\RustDedicated_Data\Managed\EasyAntiCheat.Server.dll">
+      <PrivateAssets>all</PrivateAssets>
+      <SpecificVersion>false</SpecificVersion>
     </Reference>
-    <Reference Include="Facepunch.Network">
-      <HintPath>..\..\Rust\RustDedicated_Data\Managed\Facepunch.Network.dll</HintPath>
+    <Reference Include="..\..\Rust\RustDedicated_Data\Managed\Facepunch.Console.dll">
+      <PrivateAssets>all</PrivateAssets>
+      <SpecificVersion>false</SpecificVersion>
     </Reference>
-    <Reference Include="Facepunch.Rcon">
-      <HintPath>..\..\Rust\RustDedicated_Data\Managed\Facepunch.Rcon.dll</HintPath>
+    <Reference Include="..\..\Rust\RustDedicated_Data\Managed\Facepunch.Network.dll">
+      <PrivateAssets>all</PrivateAssets>
+      <SpecificVersion>false</SpecificVersion>
     </Reference>
-    <Reference Include="Facepunch.Sqlite">
-      <HintPath>..\..\Rust\RustDedicated_Data\Managed\Facepunch.Sqlite.dll</HintPath>
+    <Reference Include="..\..\Rust\RustDedicated_Data\Managed\Facepunch.Rcon.dll">
+      <PrivateAssets>all</PrivateAssets>
+      <SpecificVersion>false</SpecificVersion>
     </Reference>
-    <Reference Include="Facepunch.System">
-      <HintPath>..\..\Rust\RustDedicated_Data\Managed\Facepunch.System.dll</HintPath>
+    <Reference Include="..\..\Rust\RustDedicated_Data\Managed\Facepunch.Sqlite.dll">
+      <PrivateAssets>all</PrivateAssets>
+      <SpecificVersion>false</SpecificVersion>
     </Reference>
-    <Reference Include="Facepunch.Unity">
-      <HintPath>..\..\Rust\RustDedicated_Data\Managed\Facepunch.Unity.dll</HintPath>
+    <Reference Include="..\..\Rust\RustDedicated_Data\Managed\Facepunch.Steamworks.Win64.dll">
+      <PrivateAssets>all</PrivateAssets>
+      <SpecificVersion>false</SpecificVersion>
     </Reference>
-    <Reference Include="Facepunch.UnityEngine">
-      <HintPath>..\..\Rust\RustDedicated_Data\Managed\Facepunch.UnityEngine.dll</HintPath>
+    <Reference Include="..\..\Rust\RustDedicated_Data\Managed\Facepunch.System.dll">
+      <PrivateAssets>all</PrivateAssets>
+      <SpecificVersion>false</SpecificVersion>
     </Reference>
-    <Reference Include="Fleck">
-      <HintPath>..\..\Rust\RustDedicated_Data\Managed\Fleck.dll</HintPath>
+    <Reference Include="..\..\Rust\RustDedicated_Data\Managed\Facepunch.Unity.dll">
+      <PrivateAssets>all</PrivateAssets>
+      <SpecificVersion>false</SpecificVersion>
     </Reference>
-    <Reference Include="Newtonsoft.Json">
-      <HintPath>..\..\Rust\RustDedicated_Data\Managed\Newtonsoft.Json.dll</HintPath>
+    <Reference Include="..\..\Rust\RustDedicated_Data\Managed\Facepunch.UnityEngine.dll">
+      <PrivateAssets>all</PrivateAssets>
+      <SpecificVersion>false</SpecificVersion>
     </Reference>
-    <Reference Include="Rust.Data">
-      <HintPath>..\..\Rust\RustDedicated_Data\Managed\Rust.Data.dll</HintPath>
+    <Reference Include="..\..\Rust\RustDedicated_Data\Managed\Fleck.dll">
+      <PrivateAssets>all</PrivateAssets>
+      <SpecificVersion>false</SpecificVersion>
     </Reference>
-    <Reference Include="Rust.Global">
-      <HintPath>..\..\Rust\RustDedicated_Data\Managed\Rust.Global.dll</HintPath>
+    <Reference Include="..\..\Rust\RustDedicated_Data\Managed\Newtonsoft.Json.dll">
+      <PrivateAssets>all</PrivateAssets>
+      <SpecificVersion>false</SpecificVersion>
     </Reference>
-    <Reference Include="Rust.Harmony">
-      <HintPath>..\..\Rust\RustDedicated_Data\Managed\Rust.Harmony.dll</HintPath>
+    <Reference Include="..\..\Rust\RustDedicated_Data\Managed\Rust.Data.dll">
+      <PrivateAssets>all</PrivateAssets>
+      <SpecificVersion>false</SpecificVersion>
     </Reference>
-    <Reference Include="Rust.Localization">
-      <HintPath>..\..\Rust\RustDedicated_Data\Managed\Rust.Localization.dll</HintPath>
+    <Reference Include="..\..\Rust\RustDedicated_Data\Managed\Rust.Global.dll">
+      <PrivateAssets>all</PrivateAssets>
+      <SpecificVersion>false</SpecificVersion>
     </Reference>
-    <Reference Include="Rust.Platform.Common">
-      <HintPath>..\..\Rust\RustDedicated_Data\Managed\Rust.Platform.Common.dll</HintPath>
+    <Reference Include="..\..\Rust\RustDedicated_Data\Managed\Rust.Harmony.dll">
+      <PrivateAssets>all</PrivateAssets>
+      <SpecificVersion>false</SpecificVersion>
     </Reference>
-    <Reference Include="UnityEngine">
-      <HintPath>..\..\Rust\RustDedicated_Data\Managed\UnityEngine.dll</HintPath>
+    <Reference Include="..\..\Rust\RustDedicated_Data\Managed\Rust.Localization.dll">
+      <PrivateAssets>all</PrivateAssets>
+      <SpecificVersion>false</SpecificVersion>
     </Reference>
-    <Reference Include="UnityEngine.CoreModule">
-      <HintPath>..\..\Rust\RustDedicated_Data\Managed\UnityEngine.CoreModule.dll</HintPath>
+    <Reference Include="..\..\Rust\RustDedicated_Data\Managed\Rust.Platform.Common.dll">
+      <PrivateAssets>all</PrivateAssets>
+      <SpecificVersion>false</SpecificVersion>
     </Reference>
-    <Reference Include="UnityEngine.ImageConversionModule">
-      <HintPath>..\..\Rust\RustDedicated_Data\Managed\UnityEngine.ImageConversionModule.dll</HintPath>
+    <Reference Include="..\..\Rust\RustDedicated_Data\Managed\UnityEngine.AIModule.dll">
+      <PrivateAssets>all</PrivateAssets>
+      <SpecificVersion>false</SpecificVersion>
     </Reference>
-    <Reference Include="UnityEngine.PhysicsModule">
-      <HintPath>..\..\Rust\RustDedicated_Data\Managed\UnityEngine.PhysicsModule.dll</HintPath>
+    <Reference Include="..\..\Rust\RustDedicated_Data\Managed\UnityEngine.CoreModule.dll">
+      <PrivateAssets>all</PrivateAssets>
+      <SpecificVersion>false</SpecificVersion>
     </Reference>
-    <Reference Include="UnityEngine.TextRenderingModule">
-      <HintPath>..\..\Rust\RustDedicated_Data\Managed\UnityEngine.TextRenderingModule.dll</HintPath>
+    <Reference Include="..\..\Rust\RustDedicated_Data\Managed\UnityEngine.dll">
+      <PrivateAssets>all</PrivateAssets>
+      <SpecificVersion>false</SpecificVersion>
     </Reference>
-    <Reference Include="UnityEngine.UI">
-      <HintPath>..\..\Rust\RustDedicated_Data\Managed\UnityEngine.UI.dll</HintPath>
+    <Reference Include="..\..\Rust\RustDedicated_Data\Managed\UnityEngine.ImageConversionModule.dll">
+      <PrivateAssets>all</PrivateAssets>
+      <SpecificVersion>false</SpecificVersion>
     </Reference>
-    <Reference Include="UnityEngine.UnityWebRequestAssetBundleModule">
-      <HintPath>..\..\Rust\RustDedicated_Data\Managed\UnityEngine.UnityWebRequestAssetBundleModule.dll</HintPath>
+    <Reference Include="..\..\Rust\RustDedicated_Data\Managed\UnityEngine.PhysicsModule.dll">
+      <PrivateAssets>all</PrivateAssets>
+      <SpecificVersion>false</SpecificVersion>
     </Reference>
-    <Reference Include="UnityEngine.UnityWebRequestAudioModule">
-      <HintPath>..\..\Rust\RustDedicated_Data\Managed\UnityEngine.UnityWebRequestAudioModule.dll</HintPath>
+    <Reference Include="..\..\Rust\RustDedicated_Data\Managed\UnityEngine.SharedInternalsModule.dll">
+      <PrivateAssets>all</PrivateAssets>
+      <SpecificVersion>false</SpecificVersion>
     </Reference>
-    <Reference Include="UnityEngine.UnityWebRequestModule">
-      <HintPath>..\..\Rust\RustDedicated_Data\Managed\UnityEngine.UnityWebRequestModule.dll</HintPath>
+    <Reference Include="..\..\Rust\RustDedicated_Data\Managed\UnityEngine.TextRenderingModule.dll">
+      <PrivateAssets>all</PrivateAssets>
+      <SpecificVersion>false</SpecificVersion>
     </Reference>
-    <Reference Include="UnityEngine.UnityWebRequestTextureModule">
-      <HintPath>..\..\Rust\RustDedicated_Data\Managed\UnityEngine.UnityWebRequestTextureModule.dll</HintPath>
+    <Reference Include="..\..\Rust\RustDedicated_Data\Managed\UnityEngine.UI.dll">
+      <PrivateAssets>all</PrivateAssets>
+      <SpecificVersion>false</SpecificVersion>
     </Reference>
-    <Reference Include="UnityEngine.UnityWebRequestWWWModule">
-      <HintPath>..\..\Rust\RustDedicated_Data\Managed\UnityEngine.UnityWebRequestWWWModule.dll</HintPath>
+    <Reference Include="..\..\Rust\RustDedicated_Data\Managed\UnityEngine.UnityWebRequestAssetBundleModule.dll">
+      <PrivateAssets>all</PrivateAssets>
+      <SpecificVersion>false</SpecificVersion>
+    </Reference>
+    <Reference Include="..\..\Rust\RustDedicated_Data\Managed\UnityEngine.UnityWebRequestAudioModule.dll">
+      <PrivateAssets>all</PrivateAssets>
+      <SpecificVersion>false</SpecificVersion>
+    </Reference>
+    <Reference Include="..\..\Rust\RustDedicated_Data\Managed\UnityEngine.UnityWebRequestModule.dll">
+      <PrivateAssets>all</PrivateAssets>
+      <SpecificVersion>false</SpecificVersion>
+    </Reference>
+    <Reference Include="..\..\Rust\RustDedicated_Data\Managed\UnityEngine.UnityWebRequestTextureModule.dll">
+      <PrivateAssets>all</PrivateAssets>
+      <SpecificVersion>false</SpecificVersion>
+    </Reference>
+    <Reference Include="..\..\Rust\RustDedicated_Data\Managed\UnityEngine.UnityWebRequestWWWModule.dll">
+      <PrivateAssets>all</PrivateAssets>
+      <SpecificVersion>false</SpecificVersion>
     </Reference>
   </ItemGroup>
 
@@ -196,6 +225,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Carbon\Carbon.csproj" />
+    <ProjectReference Include="..\Carbon\Carbon.csproj"/>
   </ItemGroup>
 </Project>
