--- a/.github/workflows/production-build.yml
+++ b/.github/workflows/production-build.yml
@@ -77,7 +77,7 @@ jobs:
     - name: 🐧 Built Carbon on Linux
       shell: bash
       run: |
-        ${GITHUB_WORKSPACE}/Tools/Build/linux/build_debug.sh
+        ${GITHUB_WORKSPACE}/Tools/Build/linux/build_release.sh
         
     - name: ⬆️ Upload the artifacts
       uses: actions/upload-artifact@v3
@@ -109,7 +109,7 @@ jobs:
     - name: 🪟 Built Carbon on Windows
       shell: cmd
       run: |
-        %GITHUB_WORKSPACE%\Tools\Build\win\build_debug.bat
+        %GITHUB_WORKSPACE%\Tools\Build\win\build_release.bat
 
     - name: ⬆️ Upload the artifacts
       uses: actions/upload-artifact@v3
